--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "mongo express server for authentication",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,16 @@
   },
   "homepage": "https://github.com/houkah26/mern-authentication#readme",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
+    "crypto": "^0.0.3",
     "express": "^4.15.3",
-    "mongoose": "^4.10.7"
-  }
+    "jsonwebtoken": "^7.4.1",
+    "mongoose": "^4.10.7",
+    "morgan": "^1.8.2",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0"
+  },
+  "referenceUrl": "http://blog.slatepeak.com/creating-a-simple-node-express-api-authentication-system-with-passport-and-jwt/"
 }
