--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^15.6.1",
-    "react-cookie": "^2.0.7",
+    "react-cookie": "^0.4.7",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "redux": "^3.7.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0"
   },
