--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,9 @@
     "react-cookie": "^0.4.7",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "next",
     "redux": "^3.7.0",
     "redux-form": "^6.8.0",
     "redux-thunk": "^2.2.0",
@@ -16,8 +18,7 @@
     "semantic-ui-react": "^0.69.0"
   },
   "devDependencies": {
-    "react-scripts": "1.0.7",
-    "redux-devtools-extension": "^2.13.2"
+    "react-scripts": "1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
