--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "history": "^4.6.3",
     "react": "^15.6.1",
     "react-cookie": "^0.4.7",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
     "redux": "^3.7.0",
