--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/houkah26/mern-authentication#readme",
   "dependencies": {
+    "axios": "^0.16.2",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.17.2",
     "crypto": "^0.0.3",
