--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
-    "cross-env": "^5.0.1",
     "history": "^4.6.3",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
@@ -22,12 +21,12 @@
   "devDependencies": {
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.0.2",
-    "react-scripts": "1.0.0"
+    "react-scripts": "^1.0.10"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
-    "start-js": "cross-env NODE_PATH=src/ react-scripts start",
+    "start-js": "react-scripts start",
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
