--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.16.2",
     "history": "^4.6.3",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-cookie": "^0.4.7",
     "react-dom": "^15.6.1",
