--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "mern-auth-server",
+  "name": "finance-server",
   "version": "1.0.0",
-  "description": "mongo express server for authentication",
-  "main": "index.js",
+  "description": "mongo express server for finance app",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -13,10 +14,6 @@
   },
   "author": "Austin Houk",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/houkah26/mern-authentication/issues"
-  },
-  "homepage": "https://github.com/houkah26/mern-authentication#readme",
   "dependencies": {
     "axios": "^0.16.2",
     "bcrypt-nodejs": "^0.0.3",
@@ -29,6 +26,9 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0"
+  },
+  "engines": {
+    "node": "6.11.0"
   },
   "referenceUrl": "http://blog.slatepeak.com/creating-a-simple-node-express-api-authentication-system-with-passport-and-jwt/"
 }
